# Yarilo

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.prod.yml  docker-compose.srv.yml  docker-compose.yml  flake.nix  main.cpp  nginx.conf
.github/workflows/: docker.yml
backend/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.build  Dockerfile.dev  Dockerfile.docs  default.nix  envoy.yaml  flake.nix  run.sh
backend/cmake/: FindLibNL.cmake
backend/docs/: Doxyfile  Doxyfile.in  mainpage.dox
backend/pcap/: handshake.pcap
backend/pcap/own/: example2.pcap
backend/src/: access_point.cpp  access_point.h  channel.h  client.cpp  client.h  database.cpp  database.h  decrypter.cpp  decrypter.h  formatter.cpp  formatter.h  group_decrypter.cpp  group_decrypter.h  log_queue.h  log_sink.cpp  log_sink.h  main.cpp  net.h  net_card_manager.cpp  net_card_manager.h  recording.cpp  recording.h  server.cpp  server.h  service.cpp  service.h  sniffer.cpp  sniffer.h  utils.h  uuid.h
envoy/: Dockerfile  entrypoint.sh  envoy.yaml
frontend/: Dockerfile  client.js  default.nix  docker-compose.yml  flake.nix  main.html  package-lock.json  package.json  proto.sh  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  webpack.config.js
frontend/envoy/: Dockerfile
frontend/pkgs/: default.nix
frontend/pkgs/protobuf/: default.nix
frontend/pkgs/protobuf-gen-js/: default.nix
frontend/pkgs/protoc-gen-js/: default.nix
frontend/src/: app.pcss  client.ts  hooks.client.ts
frontend/src/lib/: env.ts  lib.ts  stores.ts  svelte-virtual-list.d.ts
frontend/src/lib/components/: FocusPanel.svelte  IgnoredNetworksPanel.svelte  NetworkDetailsModal.svelte  NetworkList.svelte  PacketDetails.svelte  PacketViewer.svelte  RecordingLoaderModal.svelte  RecordingSaveModal.svelte  SnifferPanel.svelte  VirtualizedPacketViewer.svelte  aplist.svelte  devel.svelte  error.svelte
frontend/src/lib/proto/: PacketsServiceClientPb.ts  conn.ts  packets_pb.d.ts  packets_pb.js  service.client.ts  service.ts
frontend/src/routes/: +layout.js  +layout.svelte  +page.svelte
gui/: client.py  display.py  main.py  service_pb2_grpc.py  widgets.py
gui-2.0/: .gitignore  button_handler.py  client.py  display.py  main.py  service_pb2.py  widgets.py
gui-2.0/pages/: feedback_page.py  green_page.py  list_detail_page.py  main_menu.py  page.py
gui/pages/: feedback_page.py  focus_ignore_page.py  list_detail_page.py  main_menu.py  page.py  test_page.py
gui/src/: client.py  main.py
gui_old/lib/: LCD_2inch4.py
gui_old/src/: client.py  main.py  nodisplay.py
pcap/: 5k_packets.pcap  group_rekey.pcapng  mesh_test.pcapng  pass.md  wireshark_sample.pcap
pcap/own/: example1.pcapng
pinhandler/: INSTRUCTIONS.md  flake.nix  handler.py
protos/: ap.proto  packets.proto  recordings.proto  service.proto
proxy/: Dockerfile  envoy.yaml  envoy_dev.yaml
services/: yarilo-ap.service  yarilo-backend.service  yarilo-battery-life.service  yarilo-battery-life.timer  yarilo-downloads.service  yarilo-envoy.service  yarilo-frontend.service  yarilo-nginx.service  yarilo-phui.service  yarilo.target
src/: ManagementLayer.h  RadiotapLayer.h  access_point.cpp  access_point.h  channel.cpp  channel.h  client.cpp  client.h  livedecrypt.cpp  main.cpp  sniffer.cpp  sniffer.h
